--- a/templates/bastion.yaml.j2
+++ b/templates/bastion.yaml.j2
@@ -1,19 +1,19 @@
 apiVersion: kubevirt.io/v1
 kind: VirtualMachine
 metadata:
-  name: exercise1
-  namespace: chiaretto-vms
+  name: "bastion-user-{{ item }}"
+  namespace: "namespace-user{{ item }}"
   finalizers:
     - kubevirt.io/virtualMachineControllerFinalize
   labels:
-    app: exercise1
+    app: "bastion-user-{{ item }}"
 spec:
   dataVolumeTemplates:
     - apiVersion: cdi.kubevirt.io/v1beta1
       kind: DataVolume
       metadata:
         creationTimestamp: null
-        name: exercise1
+        name: "bastion-user-{{ item }}"
       spec:
         sourceRef:
           kind: DataSource
@@ -32,7 +32,7 @@ spec:
         vm.kubevirt.io/workload: server
       creationTimestamp: null
       labels:
-        kubevirt.io/domain: exercise1
+        kubevirt.io/domain: "bastion-user-{{ item }}"
         kubevirt.io/size: small
         network.kubevirt.io/headlessService: headless
     spec:
@@ -40,7 +40,7 @@ spec:
       domain:
         cpu:
           cores: 1
-          sockets: 4
+          sockets: 2
           threads: 1
         devices:
           disks:
@@ -51,8 +51,7 @@ spec:
                 bus: virtio
               name: cloudinitdisk
           interfaces:
-            - macAddress: '02:23:36:00:00:02'
-              masquerade: {}
+            - masquerade: {}
               model: virtio
               name: default
           rng: {}
@@ -66,7 +65,7 @@ spec:
         machine:
           type: pc-q35-rhel9.4.0
         memory:
-          guest: 8Gi
+          guest: 4Gi
         resources: {}
       networks:
         - name: default
@@ -74,12 +73,12 @@ spec:
       terminationGracePeriodSeconds: 180
       volumes:
         - dataVolume:
-            name: exercise1
+            name: "bastion-user-{{ item }}"
           name: rootdisk
         - cloudInitNoCloud:
             userData: |-
               #cloud-config
-              user: fedora
-              password: RH1@2025
+              user: user{{ item }}
+              password: {{ default_users_pwd }}
               chpasswd: { expire: False }
           name: cloudinitdisk
