--- a/templates/exercise1-break-vm.yaml.j2
+++ b/templates/exercise1-break-vm.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: kubevirt.io/v1
 kind: VirtualMachine
 metadata:
   name: exercise1
-  namespace: chiaretto-vms
+  namespace: "exercise1_{{ user }}"
   finalizers:
     - kubevirt.io/virtualMachineControllerFinalize
   labels:
@@ -51,8 +51,7 @@ spec:
                 bus: virtio
               name: cloudinitdisk
           interfaces:
-            - macAddress: '02:23:36:00:00:02'
-              masquerade: {}
+            - masquerade: {}
               model: virtio
               name: default
           rng: {}
