--- a/templates/exercise2-vm.yaml.j2
+++ b/templates/exercise2-vm.yaml.j2
@@ -1,19 +1,19 @@
 apiVersion: kubevirt.io/v1
 kind: VirtualMachine
 metadata:
-  name: exercise1
+  name: "exercise2"
   namespace: "namespace-{{ user }}"
   finalizers:
     - kubevirt.io/virtualMachineControllerFinalize
   labels:
-    app: exercise1
+    app: "exercise2"
 spec:
   dataVolumeTemplates:
     - apiVersion: cdi.kubevirt.io/v1beta1
       kind: DataVolume
       metadata:
         creationTimestamp: null
-        name: exercise1
+        name: "exercise2"
       spec:
         sourceRef:
           kind: DataSource
@@ -32,7 +32,7 @@ spec:
         vm.kubevirt.io/workload: server
       creationTimestamp: null
       labels:
-        kubevirt.io/domain: exercise1
+        kubevirt.io/domain: "exercise2"
         kubevirt.io/size: small
         network.kubevirt.io/headlessService: headless
     spec:
@@ -65,7 +65,7 @@ spec:
         machine:
           type: pc-q35-rhel9.4.0
         memory:
-          guest: 128Gi
+          guest: 4Gi
         resources: {}
       networks:
         - name: default
@@ -73,7 +73,7 @@ spec:
       terminationGracePeriodSeconds: 180
       volumes:
         - dataVolume:
-            name: exercise1
+            name: "exercise2"
           name: rootdisk
         - cloudInitNoCloud:
             userData: |-
@@ -81,4 +81,18 @@ spec:
               user: "{{ user }}"
               password: RH1@2025
               chpasswd: { expire: False }
+              packages:
+                - httpd
+                - curl
+
+              runcmd:
+                - systemctl enable httpd
+                - systemctl start httpd
+                - echo "Hello from exercise2, you are doing a great job!" > /var/www/html/index.html
+                - curl -L -o /tmp/openshift-client-linux.tar.gz "https://mirror.openshift.com/pub/openshift-v4/clients/ocp/4.16.19/openshift-client-linux.tar.gz"
+                - mkdir -p /usr/local/bin
+                - tar -xzf /tmp/openshift-client-linux.tar.gz  -C /usr/local/bin
+                - rm /tmp/openshift-client-linux.tar.gz
+
+              final_message: "HTTP server is configured, file downloaded and extracted!"
           name: cloudinitdisk
