fix curlimage pod namespace

--- a/templates/exercise2-curl-pod.yaml.j2
+++ b/templates/exercise2-curl-pod.yaml.j2
@@ -5,6 +5,7 @@ metadata:
   labels:
     run: curlimage
   name: curlimage
+  namespace: "namespace-{{ user }}"
 spec:
   containers:
   - image: quay.io/chiaretto/curlimage
