--- a/templates/exercise2-curl-pod.yaml.j2
+++ b/templates/exercise2-curl-pod.yaml.j2
@@ -11,6 +11,7 @@ spec:
   - image: quay.io/chiaretto/curlimage
     name: curlimage
     resources: {}
+    command: ["sleep", "infinity"]
   dnsPolicy: ClusterFirst
   restartPolicy: Always
 status: {}
