change cloud-init pass

--- a/templates/exercise1-fix-vm.yaml.j2
+++ b/templates/exercise1-fix-vm.yaml.j2
@@ -80,6 +80,6 @@ spec:
             userData: |-
               #cloud-config
               user: "{{ user }}"
-              password: RH1@2025
+              password: redhat1
               chpasswd: { expire: False }
           name: cloudinitdisk
