--- a/templates/exercise2-vm.yaml.j2
+++ b/templates/exercise2-vm.yaml.j2
@@ -79,7 +79,7 @@ spec:
             userData: |-
               #cloud-config
               user: "{{ user }}"
-              password: RH1@2025
+              password: redhat1
               chpasswd: { expire: False }
               packages:
                 - httpd
