--- a/templates/exercise2-fix-route.yaml.j2
+++ b/templates/exercise2-fix-route.yaml.j2
@@ -6,6 +6,9 @@ metadata:
 spec:
   port:
     targetPort: 80
+  tls:
+    insecureEdgeTerminationPolicy: Redirect
+    termination: edge
   to:
     kind: Service
     name: exercise2
