--- a/templates/exercise1-fix-vm.yaml.j2
+++ b/templates/exercise1-fix-vm.yaml.j2
@@ -79,7 +79,7 @@ spec:
         - cloudInitNoCloud:
             userData: |-
               #cloud-config
-              user: "{{ user }}"
+              user: "lab-user"
               password: redhat1
               chpasswd: { expire: False }
           name: cloudinitdisk
