--- a/templates/exercise2-vm.yaml.j2
+++ b/templates/exercise2-vm.yaml.j2
@@ -78,7 +78,7 @@ spec:
         - cloudInitNoCloud:
             userData: |-
               #cloud-config
-              user: "{{ user }}"
+              user: "lab-user"
               password: redhat1
               chpasswd: { expire: False }
               packages:
