--- a/templates/exercise2-create-vm.yaml.j2
+++ b/templates/exercise2-create-vm.yaml.j2
@@ -1,19 +1,19 @@
 apiVersion: kubevirt.io/v1
 kind: VirtualMachine
 metadata:
-  name: "exercise2"
+  name: exercise2
   namespace: "namespace-{{ user }}"
   finalizers:
     - kubevirt.io/virtualMachineControllerFinalize
   labels:
-    app: "exercise2"
+    app: exercise2
 spec:
   dataVolumeTemplates:
     - apiVersion: cdi.kubevirt.io/v1beta1
       kind: DataVolume
       metadata:
         creationTimestamp: null
-        name: "exercise2"
+        name: exercise2
       spec:
         sourceRef:
           kind: DataSource
@@ -32,7 +32,7 @@ spec:
         vm.kubevirt.io/workload: server
       creationTimestamp: null
       labels:
-        kubevirt.io/domain: "exercise2"
+        kubevirt.io/domain: exercise2
         kubevirt.io/size: small
         network.kubevirt.io/headlessService: headless
     spec:
@@ -40,7 +40,7 @@ spec:
       domain:
         cpu:
           cores: 1
-          sockets: 2
+          sockets: 1
           threads: 1
         devices:
           disks:
@@ -65,7 +65,7 @@ spec:
         machine:
           type: pc-q35-rhel9.4.0
         memory:
-          guest: 4Gi
+          guest: 2Gi
         resources: {}
       networks:
         - name: default
@@ -73,7 +73,7 @@ spec:
       terminationGracePeriodSeconds: 180
       volumes:
         - dataVolume:
-            name: "exercise2"
+            name: exercise2
           name: rootdisk
         - cloudInitNoCloud:
             userData: |-
@@ -81,14 +81,10 @@ spec:
               user: "lab-user"
               password: redhat1
               chpasswd: { expire: False }
-              packages:
-                - httpd
-                - curl
-
-              runcmd:
-                - systemctl enable httpd
-                - systemctl start httpd
-                - echo "Hello from exercise2, you are doing a great job!" > /var/www/html/index.html
-
-              final_message: "HTTP server is configured, file downloaded and extracted!"
           name: cloudinitdisk
+      nodeSelector:
+        node-role.kubernetes.io/baremetal: ""
+      tolerations:
+      - effect: NoSchedule
+        key: bare_metal
+        value: "true"
