--- a/templates/exercise4-fix-vm.yaml.j2
+++ b/templates/exercise4-fix-vm.yaml.j2
@@ -83,8 +83,8 @@ spec:
               user: "lab-user"
               password: redhat1
               chpasswd: { expire: False }
-              run_cmd:
-                - dnf install -y https://dl.fedoraproject.org/pub/epel/9/Everything/x86_64/Packages/s/stress-1.0.4-29.el9.x86_64.rpm
+              packages:
+                - https://dl.fedoraproject.org/pub/epel/9/Everything/x86_64/Packages/s/stress-1.0.4-29.el9.x86_64.rpm
               write_files:
                 - path: /etc/systemd/system/stress.service
                   permissions: '0644'
