add and update for exercise5

--- a/templates/curl-pod.yaml.j2
+++ b/templates/curl-pod.yaml.j2
@@ -5,7 +5,7 @@ metadata:
   labels:
     run: curlimage
   name: curlimage
-  namespace: "namespace-{{ user }}"
+  namespace: "namespace-user1"
 spec:
   containers:
   - image: quay.io/chiaretto/curlimage
