--- a/templates/exercise5-create-vm.yaml.j2
+++ b/templates/exercise5-create-vm.yaml.j2
@@ -1,28 +1,20 @@
 apiVersion: kubevirt.io/v1
 kind: VirtualMachine
 metadata:
-  name: "exercise4"
+  name: "exercise5"
   namespace: "namespace-user1"
-  finalizers:
-    - kubevirt.io/virtualMachineControllerFinalize
-  labels:
-    app: "exercise4"
 spec:
   dataVolumeTemplates:
-    - apiVersion: cdi.kubevirt.io/v1beta1
-      kind: DataVolume
-      metadata:
-        creationTimestamp: null
-        name: "exercise4"
+    - metadata:
+        name: "exercise5-volume"
       spec:
         sourceRef:
           kind: DataSource
           name: rhel9
           namespace: openshift-virtualization-os-images
         storage:
-          resources:
-            requests:
-              storage: 30Gi
+          resources: {}
+          storageClassName: ocs-external-storagecluster-ceph-rbd
   running: true
   template:
     metadata:
@@ -30,14 +22,9 @@ spec:
         vm.kubevirt.io/flavor: small
         vm.kubevirt.io/os: rhel9
         vm.kubevirt.io/workload: server
-      creationTimestamp: null
       labels:
-        kubevirt.io/domain: "exercise4"
-        kubevirt.io/size: small
         network.kubevirt.io/headlessService: headless
     spec:
-      nodeSelector:
-        "user1": "true"
       architecture: amd64
       domain:
         cpu:
@@ -72,40 +59,15 @@ spec:
       networks:
         - name: default
           pod: {}
-      terminationGracePeriodSeconds: 180
+      terminationGracePeriodSeconds: 180  
       volumes:
         - dataVolume:
-            name: "exercise4"
+            name: "exercise5-volume"
           name: rootdisk
         - cloudInitNoCloud:
-            userData: |-
+            userData: |
               #cloud-config
               user: "lab-user"
               password: redhat1
               chpasswd: { expire: False }
-              packages:
-                - stress 
-              write_files:
-                - path: /etc/systemd/system/stress.service
-                  permissions: '0644'
-                  content: |
-                    [Unit]
-                    Description=stress
-                    After=network.target
-
-                    [Service]
-                    Type=simple
-                    ExecStart=stress --cpu 2 --timeout 7200
-                    Restart=always
-                    RestartSec=5s
-                    StandardOutput=journal
-                    StandardError=journal
-
-                    [Install]
-                    WantedBy=multi-user.target
-
-              runcmd:
-                - systemctl daemon-reload
-                - systemctl enable --now stress.service
-
           name: cloudinitdisk
