--- a/templates/exercise3-service.yaml.j2
+++ b/templates/exercise3-service.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: exercise3
-  namespace: "namespace-user1"
+  namespace: "namespace-{{ user }}"
 spec:
   internalTrafficPolicy: Cluster
   ipFamilies:
