--- a/templates/exercise3-vm.yaml.j2
+++ b/templates/exercise3-vm.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: kubevirt.io/v1
 kind: VirtualMachine
 metadata:
   name: "exercise3"
-  namespace: "namespace-user1"
+  namespace: "namespace-{{ user }}"
   finalizers:
     - kubevirt.io/virtualMachineControllerFinalize
   labels:
