do not need user

--- a/templates/bashrc-bastion.j2
+++ b/templates/bashrc-bastion.j2
@@ -16,7 +16,6 @@ function openshift_prompt {
       echo -e "(N/A)"
     else
         OPENSHIFT_CLUSTER=$(oc whoami --show-server  2>/dev/null | awk -F '.' '{ print $2 }')
-        OPENSHIFT_USER=$(oc whoami 2>/dev/null)
         OPENSHIFT_PROJECT=$(oc project -q 2>/dev/null)
 
         if [[ $OPENSHIFT_PROJECT == "" ]]; then
@@ -25,7 +24,7 @@ function openshift_prompt {
 
         OPENSHIFT_VERSION=$(oc version | grep Server | awk -F' ' '{print $3}')
 
-        echo -e "(${OPENSHIFT_CLUSTER}:${OPENSHIFT_USER}:${OPENSHIFT_PROJECT})"
+        echo -e "(${OPENSHIFT_CLUSTER}:${OPENSHIFT_PROJECT})"
     fi
 }
 
