--- a/templates/configure-tmux-users.sh.j2
+++ b/templates/configure-tmux-users.sh.j2
@@ -1,5 +1,7 @@
 #!/bin/bash
 
+TMUX_GIT_DIR="/home/lab-user/tmux"
+
 for user in $(seq 1 {{ num_users }})
 do
   echo "Configuring .bashrc, vimrc and .tmux.conf files"
