added namespace on restore snapshot

--- a/templates/exercise7-restoresnapshot.yaml.j2
+++ b/templates/exercise7-restoresnapshot.yaml.j2
@@ -2,6 +2,7 @@
  kind: VirtualMachineRestore
  metadata:
    name: restore-exercise7-snapshot
+   namespace: "namespace-{{ user }}"
  spec:
    target:
      apiGroup: kubevirt.io
