--- a/templates/bashrc-bastion.j2
+++ b/templates/bashrc-bastion.j2
@@ -2,6 +2,10 @@
 # see /usr/share/doc/bash/examples/startup-files (in the package bash-doc)
 # for examples
 
+parse_git_branch() {
+  git branch 2> /dev/null | sed -e '/^[^*]/d' -e 's/* \(.*\)/ (\1)/'
+}
+
 # If not running interactively, don't do anything
 case $- in
     *i*) ;;
