changed secret name on ex9

--- a/templates/exercise9-secret.yaml.j2
+++ b/templates/exercise9-secret.yaml.j2
@@ -3,6 +3,6 @@ data:
   key: "{{ encodedsshpubkey }}"
 kind: Secret
 metadata:
-  name: idrsa
+  name: idrsa-exercise9
   namespace: 'namespace-{{ user }}'
 type: Opaque
