--- a/templates/exercise9-vm.yaml.j2
+++ b/templates/exercise9-vm.yaml.j2
@@ -48,7 +48,7 @@ spec:
                   - lab-user
             source:
               secret:
-                secretName: idrsa
+                secretName: idrsa-exercise9
       architecture: amd64
       domain:
         cpu:
