expire password false

--- a/templates/exercise9-vm.yaml.j2
+++ b/templates/exercise9-vm.yaml.j2
@@ -93,6 +93,7 @@ spec:
               #cloud-config
               user: "lab-user"
               password: "redhat1"
+              chpasswd: { expire: False }
               runcmd:
               - [ setsebool, -P, virt_qemu_ga_manage_ssh, on ]
           name: cloudinitdisk
