--- a/templates/exercise11-create-vm-a.yaml.j2
+++ b/templates/exercise11-create-vm-a.yaml.j2
@@ -1,23 +1,23 @@
 apiVersion: kubevirt.io/v1
 kind: VirtualMachine
 metadata:
-  name: exercise2
+  name: exercise11-a
   namespace: "namespace-{{ user }}"
   finalizers:
     - kubevirt.io/virtualMachineControllerFinalize
   labels:
-    app: exercise2
+    app: exercise11-a
 spec:
   dataVolumeTemplates:
     - apiVersion: cdi.kubevirt.io/v1beta1
       kind: DataVolume
       metadata:
         creationTimestamp: null
-        name: exercise2
+        name: exercise11-a
       spec:
         sourceRef:
           kind: DataSource
-          name: fedora
+          name: rhel9
           namespace: openshift-virtualization-os-images
         storage:
           resources:
@@ -28,11 +28,11 @@ spec:
     metadata:
       annotations:
         vm.kubevirt.io/flavor: small
-        vm.kubevirt.io/os: fedora
+        vm.kubevirt.io/os: rhel9
         vm.kubevirt.io/workload: server
       creationTimestamp: null
       labels:
-        kubevirt.io/domain: exercise2
+        kubevirt.io/domain: exercise11-a
         kubevirt.io/size: small
         network.kubevirt.io/headlessService: headless
     spec:
@@ -51,7 +51,7 @@ spec:
                 bus: virtio
               name: cloudinitdisk
           interfaces:
-            - masquerade: {}
+            - bridge: {}
               model: virtio
               name: default
           rng: {}
@@ -65,15 +65,16 @@ spec:
         machine:
           type: pc-q35-rhel9.4.0
         memory:
-          guest: 2Gi
+          guest: 4Gi
         resources: {}
       networks:
-        - name: default
-          pod: {}
+        - multus:
+            networkName: exercise11-nad
+          name: default
       terminationGracePeriodSeconds: 180
       volumes:
         - dataVolume:
-            name: exercise2
+            name: exercise11-a
           name: rootdisk
         - cloudInitNoCloud:
             userData: |-
@@ -81,10 +82,12 @@ spec:
               user: "lab-user"
               password: redhat1
               chpasswd: { expire: False }
+              network:
+                version: 1
+                config:
+                  - type: physical
+                    name: eth1
+                    subnets:
+                      - type: static
+                        address: 192.168.0.10/24
           name: cloudinitdisk
-      nodeSelector:
-        node-role.kubernetes.io/baremetal: ""
-      tolerations:
-      - effect: NoSchedule
-        key: bare_metal
-        value: "true"
