nad added on ex11 vms

--- a/templates/exercise11-create-vm-a.yaml.j2
+++ b/templates/exercise11-create-vm-a.yaml.j2
@@ -54,6 +54,9 @@ spec:
             - bridge: {}
               model: virtio
               name: default
+            - bridge: {}
+              model: virtio
+              name: exercise11-nad
           rng: {}
         features:
           acpi: {}
