--- a/templates/exercise11-create-vm-a.yaml.j2
+++ b/templates/exercise11-create-vm-a.yaml.j2
@@ -1,12 +1,12 @@
 apiVersion: kubevirt.io/v1
 kind: VirtualMachine
 metadata:
-  name: exercise11-a
+  name:  exercise11-a
   namespace: "namespace-{{ user }}"
   finalizers:
     - kubevirt.io/virtualMachineControllerFinalize
   labels:
-    app: exercise11-a
+    app:  exercise11-a
 spec:
   dataVolumeTemplates:
     - apiVersion: cdi.kubevirt.io/v1beta1
@@ -34,7 +34,6 @@ spec:
       labels:
         kubevirt.io/domain: exercise11-a
         kubevirt.io/size: small
-        network.kubevirt.io/headlessService: headless
     spec:
       architecture: amd64
       domain:
@@ -51,7 +50,7 @@ spec:
                 bus: virtio
               name: cloudinitdisk
           interfaces:
-            - bridge: {}
+              masquerade: {}
               model: virtio
               name: default
             - bridge: {}
@@ -71,9 +70,11 @@ spec:
           guest: 4Gi
         resources: {}
       networks:
+        - name: default
+          pod: {}
         - multus:
             networkName: exercise11-nad
-          name: default
+          name: exercise11-nad
       terminationGracePeriodSeconds: 180
       volumes:
         - dataVolume:
