--- a/templates/exercise11-create-vm-b.yaml.j2
+++ b/templates/exercise11-create-vm-b.yaml.j2
@@ -50,7 +50,7 @@ spec:
                 bus: virtio
               name: cloudinitdisk
           interfaces:
-              masquerade: {}
+            - masquerade: {}
               model: virtio
               name: default
             - bridge: {}
