--- a/templates/exercise11-create-vm-a.yaml.j2
+++ b/templates/exercise11-create-vm-a.yaml.j2
@@ -86,12 +86,10 @@ spec:
               user: "lab-user"
               password: redhat1
               chpasswd: { expire: False }
-              network:
-                version: 1
-                config:
-                  - type: physical
-                    name: eth1
-                    subnets:
-                      - type: static
-                        address: 192.168.0.10/24
+            networkData: |
+              version: 2
+              ethernets:
+                eth1: 
+                  addresses:
+                  - 192.168.0.10/24
           name: cloudinitdisk
