--- a/templates/exercise10-fix-vm.yaml.j2
+++ b/templates/exercise10-fix-vm.yaml.j2
@@ -1,13 +1,12 @@
 apiVersion: kubevirt.io/v1
 kind: VirtualMachine
 metadata:
-  name:  exercise10
+  name: exercise10
   namespace: "namespace-{{ user }}"
   finalizers:
     - kubevirt.io/virtualMachineControllerFinalize
   labels:
-    kubevirt.io/dynamic-credentials-support: 'true'
-    app:  exercise10
+    app: exercise10
 spec:
   dataVolumeTemplates:
     - apiVersion: cdi.kubevirt.io/v1beta1
@@ -35,9 +34,8 @@ spec:
       labels:
         kubevirt.io/domain: exercise10
         kubevirt.io/size: small
+        network.kubevirt.io/headlessService: headless
     spec:
-      nodeSelector:
-        "{{ user }}": "true"
       architecture: amd64
       domain:
         cpu:
@@ -56,9 +54,6 @@ spec:
             - masquerade: {}
               model: virtio
               name: default
-            - bridge: {}
-              model: virtio
-              name: exercise10-nad
           rng: {}
         features:
           acpi: {}
@@ -75,9 +70,6 @@ spec:
       networks:
         - name: default
           pod: {}
-        - multus:
-            networkName: exercise10-nad
-          name: exercise10-nad
       terminationGracePeriodSeconds: 180
       volumes:
         - dataVolume:
@@ -89,12 +81,4 @@ spec:
               user: "lab-user"
               password: redhat1
               chpasswd: { expire: False }
-              runcmd:
-              - [ setsebool, -P, virt_qemu_ga_manage_ssh, on ]
-            networkData: |
-              version: 2
-              ethernets:
-                eth1: 
-                  addresses:
-                  - 192.168.0.10/24
           name: cloudinitdisk
