no masquarade on ex10

--- a/templates/exercise10-create-vm.yaml.j2
+++ b/templates/exercise10-create-vm.yaml.j2
@@ -53,8 +53,7 @@ spec:
                 bus: virtio
               name: cloudinitdisk
           interfaces:
-            - masquerade: {}
-              model: virtio
+            - model: virtio
               name: default
             - bridge: {}
               model: virtio
