--- a/templates/check-lab.sh.j2
+++ b/templates/check-lab.sh.j2
@@ -5,7 +5,7 @@ COLOR_RED="\033[0;31m"
 COLOR_RESET="\033[0m"
 
 # Captura o início do script
-script_start=$(date +%s)
+script_start=$(date +%s.%N)
 
 for ex in $(shuf -i 1-11)
 do
@@ -62,10 +62,11 @@ do
   fi  
 done
 
-script_end=$(date +%s)
+script_end=$(date +%s.%N)
 
-minutes=$((total_duration / 60))
-seconds=$((total_duration % 60))
+total_duration=$(echo "$script_end - $script_start" | bc)
+total_minutes=$(echo "$total_duration / 60" | bc)
+total_seconds=$(echo "$total_duration % 60" | bc)
 
-echo -e "${COLOR_GREEN}Script executed successfully in ${minutes}m ${seconds}s${COLOR_RESET}"
-logger -p local0.notice "Script executed successfully in ${minutes}m ${seconds}s"
+echo -e "${COLOR_GREEN}Script executed successfully in ${total_minutes}m ${total_seconds}s${COLOR_RESET}"
+logger -p local0.notice "Script executed successfully in ${total_minutes}m ${total_seconds}s"
