--- a/templates/perf-test-tmux.yaml.j2
+++ b/templates/perf-test-tmux.yaml.j2
@@ -2,7 +2,8 @@ session_name: PERF
 windows:
   - window_name: performancetest-1
     layout: tiled
-    focus: true
+    options:
+      synchronize-panes: true
     panes:
       - sudo su - user1
       - sudo su - user2
@@ -10,6 +11,8 @@ windows:
       - sudo su - user4
   - window_name: performancetest-2
     layout: tiled
+    options:
+      synchronize-panes: true
     panes:
       - sudo su - user5
       - sudo su - user6
@@ -17,6 +20,8 @@ windows:
       - sudo su - user8
   - window_name: performancetest-3
     layout: tiled
+    options:
+      synchronize-panes: true
     panes:
       - sudo su - user9
       - sudo su - user10
@@ -24,6 +29,8 @@ windows:
       - sudo su - user12
   - window_name: performancetest-4
     layout: tiled
+    options:
+      synchronize-panes: true
     panes:
       - sudo su - user13
       - sudo su - user14
@@ -31,6 +38,8 @@ windows:
       - sudo su - user16
   - window_name: performancetest-5
     layout: tiled
+    options:
+      synchronize-panes: true
     panes:
       - sudo su - user17
       - sudo su - user18
