--- a/templates/exercise12-mnp-deny.yaml.j2
+++ b/templates/exercise12-mnp-deny.yaml.j2
@@ -2,6 +2,7 @@ apiVersion: k8s.cni.cncf.io/v1beta1
 kind: MultiNetworkPolicy
 metadata:
   name: deny-by-default
+  namespace: 'namespace-{{ user }}'
   annotations:
     k8s.v1.cni.cncf.io/policy-for: namespace-{{ user }}/exercise12-nad
 spec:
