fix ssh on ex12

--- a/templates/exercise12-create-vm-a.yaml.j2
+++ b/templates/exercise12-create-vm-a.yaml.j2
@@ -103,4 +103,6 @@ spec:
               password: redhat1
               chpasswd:
                 expire: false
+              runcmd:
+              - [ setsebool, -P, virt_qemu_ga_manage_ssh, on ]
           name: cloudinitdisk
