--- a/templates/exercise10-create-vm-a.yaml.j2
+++ b/templates/exercise10-create-vm-a.yaml.j2
@@ -1,19 +1,20 @@
 apiVersion: kubevirt.io/v1
 kind: VirtualMachine
 metadata:
-  name: exercise10
+  name:   exercise10-a
   namespace: "namespace-{{ user }}"
   finalizers:
     - kubevirt.io/virtualMachineControllerFinalize
   labels:
-    app: exercise10
+    kubevirt.io/dynamic-credentials-support: 'true'
+    app: exercise10-a
 spec:
   dataVolumeTemplates:
     - apiVersion: cdi.kubevirt.io/v1beta1
       kind: DataVolume
       metadata:
         creationTimestamp: null
-        name: exercise10
+        name:  exercise10-a
       spec:
         sourceRef:
           kind: DataSource
@@ -32,10 +33,18 @@ spec:
         vm.kubevirt.io/workload: server
       creationTimestamp: null
       labels:
-        kubevirt.io/domain: exercise10
+        kubevirt.io/domain:  exercise10-a
         kubevirt.io/size: small
-        network.kubevirt.io/headlessService: headless
     spec:
+      accessCredentials:
+        - sshPublicKey:
+            propagationMethod:
+              qemuGuestAgent:
+                users:
+                  - lab-user
+            source:
+              secret:
+                secretName: idrsa
       architecture: amd64
       domain:
         cpu:
@@ -51,9 +60,12 @@ spec:
                 bus: virtio
               name: cloudinitdisk
           interfaces:
-            - bridge: {}
+            - masquerade: {}
               model: virtio
               name: default
+            - bridge: {}
+              model: virtio
+              name: exercise10-nad
           rng: {}
         features:
           acpi: {}
@@ -68,13 +80,15 @@ spec:
           guest: 4Gi
         resources: {}
       networks:
+        - name: default
+          pod: {}
         - multus:
             networkName: exercise10-nad
-          name: default
+          name: exercise10-nad
       terminationGracePeriodSeconds: 180
       volumes:
         - dataVolume:
-            name: exercise10
+            name:  exercise10-a
           name: rootdisk
         - cloudInitNoCloud:
             userData: |-
@@ -82,4 +96,12 @@ spec:
               user: "lab-user"
               password: redhat1
               chpasswd: { expire: False }
+              runcmd:
+              - [ setsebool, -P, virt_qemu_ga_manage_ssh, on ]
+            networkData: |
+              version: 2
+              ethernets:
+                eth1: 
+                  addresses:
+                  - 192.168.0.10/24
           name: cloudinitdisk
