--- a/templates/exercise10-create-nad-fix.yaml.j2
+++ b/templates/exercise10-create-nad-fix.yaml.j2
@@ -1,7 +1,7 @@
 apiVersion: k8s.cni.cncf.io/v1
 kind: NetworkAttachmentDefinition
 metadata:
-  name: exercise11-nad
+  name: exercise10-nad
   namespace: 'namespace-{{ user }}'
 spec:
-  config: '{ "cniVersion": "0.4.0", "name": "exercise11-nad", "netAttachDefName": "namespace-{{ user }}/exercise10-nad", "topology": "layer2", "type": "ovn-k8s-cni-overlay" }'
+  config: '{ "cniVersion": "0.4.0", "name": "exercise110nad", "netAttachDefName": "namespace-{{ user }}/exercise10-nad", "topology": "layer2", "type": "ovn-k8s-cni-overlay" }'
