--- a/templates/exercise10-create-vm-a-fix.yaml.j2
+++ b/templates/exercise10-create-vm-a-fix.yaml.j2
@@ -76,7 +76,7 @@ spec:
               name: default
             - bridge: {}
               model: virtio
-              name: br-ex-network
+              name: exercise10-nad-layer2
           rng: {}
         features:
           acpi: {}
