--- a/templates/exercise10-create-vm-b-fix.yaml.j2
+++ b/templates/exercise10-create-vm-b-fix.yaml.j2
@@ -94,8 +94,8 @@ spec:
         - name: default
           pod: {}
         - multus:
-            networkName: br-ex-network
-          name: br-ex-network
+            networkName: exercise10-nad-layer2
+          name: exercise10-nad-layer2
       terminationGracePeriodSeconds: 180
       volumes:
         - dataVolume:
