do not need mac addr on ex1

--- a/templates/exercise1-fix-vm.yaml.j2
+++ b/templates/exercise1-fix-vm.yaml.j2
@@ -51,8 +51,7 @@ spec:
                 bus: virtio
               name: cloudinitdisk
           interfaces:
-            - macAddress: '02:23:36:00:00:02'
-              masquerade: {}
+            - masquerade: {}
               model: virtio
               name: default
           rng: {}
