removed finalizer and added ssh on fix vm ex6

--- a/templates/exercise6-fix-vm.yaml.j2
+++ b/templates/exercise6-fix-vm.yaml.j2
@@ -3,9 +3,8 @@ kind: VirtualMachine
 metadata:
   name: exercise6
   namespace: "namespace-{{ user }}"
-  finalizers:
-    - kubevirt.io/virtualMachineControllerFinalize
   labels:
+    kubevirt.io/dynamic-credentials-support: 'true'
     app: exercise6
 spec:
   dataVolumeTemplates:
@@ -36,6 +35,15 @@ spec:
         kubevirt.io/size: small
         network.kubevirt.io/headlessService: headless
     spec:
+      accessCredentials:
+        - sshPublicKey:
+            propagationMethod:
+              qemuGuestAgent:
+                users:
+                  - lab-user
+            source:
+              secret:
+                secretName: idrsa
       architecture: amd64
       domain:
         cpu:
@@ -81,4 +89,6 @@ spec:
               user: "lab-user"
               password: redhat1
               chpasswd: { expire: False }
+              runcmd:
+              - [ setsebool, -P, virt_qemu_ga_manage_ssh, on ]
           name: cloudinitdisk
