--- a/templates/exercise4-fix-vm.yaml.j2
+++ b/templates/exercise4-fix-vm.yaml.j2
@@ -37,6 +37,15 @@ spec:
         kubevirt.io/size: small
         network.kubevirt.io/headlessService: headless
     spec:
+      accessCredentials:
+        - sshPublicKey:
+            propagationMethod:
+              qemuGuestAgent:
+                users:
+                  - lab-user
+            source:
+              secret:
+                secretName: idrsa
       nodeSelector:
         "{{ user }}": "true"
       architecture: amd64
