do not remove ssh key

--- a/templates/exercise8-vm-rhel9.yaml.j2
+++ b/templates/exercise8-vm-rhel9.yaml.j2
@@ -47,7 +47,7 @@ spec:
                   - lab-user
             source:
               secret:
-                secretName: idrsa
+                secretName: idrsa-fake
       architecture: amd64
       domain:
         cpu:
