--- a/templates/generate-tmux-session.sh.j2
+++ b/templates/generate-tmux-session.sh.j2
@@ -27,7 +27,9 @@ for window in $(seq 1 "$total_windows"); do
 
   for pane in $(seq 1 "$users_per_window"); do
     if [[ "$user_count" -le "$num_users" ]]; then
+      echo "    - shell_command:" >> "$output_file"
       echo "      - sudo su - user$user_count" >> "$output_file"
+      echo "      - oc login --insecure-skip-tls-verify=true -u user$user_count {openshift_api_url} -p XXXX" >> "$output_file"
       ((user_count++))
     fi
   done
